--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- This code sets up a basic structure with a <canvas> where Three.js will render the 3D scene -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
