--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- This code sets up a basic structure with a <canvas> where Three.js will render the 3D scene -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +8,13 @@
 </head>
 <body>
   <canvas id="solar-system-canvas"></canvas>
+  
+  <!-- Info Panel for displaying planet details -->
+  <div id="info-panel" style="display: none;">
+      <h1 id="planet-name"></h1>
+      <p id="planet-details"></p>
+  </div>
+  
   <script src="script.js" type="module"></script>
 </body>
 </html>
