--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Solar System</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Solar System</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Three.js and OrbitControls CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
 </head>
 <body>
-  <canvas id="solar-system-canvas"></canvas>
-  
-  <!-- Info Panel for displaying planet details -->
-  <div id="info-panel" style="display: none;">
-      <h1 id="planet-name"></h1>
-      <p id="planet-details"></p>
-  </div>
+    <canvas id="solar-system-canvas"></canvas>
 
-  <script src="script.js" type="module"></script>
+    <!-- Info Panel for displaying planet details -->
+    <div id="info-panel" style="display: none;">
+        <h1 id="planet-name"></h1>
+        <p id="planet-details"></p>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
