--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
 </head>
 <body>
+    <!-- Canvas for the Solar System -->
     <canvas id="solar-system-canvas"></canvas>
 
     <!-- Info Panel for displaying planet details -->
-    <div id="info-panel" style="display: none;">
+    <div id="info-panel">
+        <button id="close-btn" onclick="hidePlanetInfo()">X</button> <!-- Close button (optional) -->
         <h1 id="planet-name"></h1>
         <p id="planet-details"></p>
     </div>
