--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@
 
     <!-- Info Panel for displaying planet details -->
     <div id="info-panel">
-        <button id="close-btn" onclick="hidePlanetInfo()">X</button>
+        <button id="close-btn" onclick="hidePlanetInfo()">X</button> <!-- Close button (optional) -->
         <h1 id="planet-name"></h1>
-        <p id="planet-details">
-            <span id="short-description"></span>
-            <span id="full-description" style="display: none;"></span>
-            <a href="#" id="read-more" onclick="expandDescription()">Read more</a>
-        </p>
+        <p id="planet-details"></p>
     </div>
 
     <script src="script.js"></script>
