--- a/index.html
+++ b/index.html
@@ -14,15 +14,21 @@
 
     <!-- Info Panel for displaying planet details -->
     <div id="info-panel">
-        <button id="close-btn" onclick="hidePlanetInfo()">X</button> <!-- Optional close button -->
-        <h1 id="planet-name"></h1>
+        <button id="close-btn" onclick="hidePlanetInfo()">X</button> <!-- Close button for hiding the info panel -->
+        <h1 id="planet-name"></h1> <!-- Display the name of the clicked planet -->
+        
+        <!-- Planet details with short and full descriptions -->
         <p id="planet-details">
-            <span id="short-description"></span>
-            <span id="full-description" style="display: none;"></span>
-            <a href="#" id="read-more" onclick="expandDescription(event)">Read more</a>
+            <span id="short-description"></span> <!-- Short version of the description -->
+            <span id="full-description" style="display: none;"></span> <!-- Full version, initially hidden -->
+            
+            <!-- 'Read more' and 'Read less' links -->
+            <a href="#" id="read-more" onclick="expandDescription(event)">Read more</a> <!-- Expands the description -->
+            <a href="#" id="read-less" onclick="collapseDescription(event)" style="display: none;">Read less</a> <!-- Collapses the description -->
         </p>
     </div>
 
+    <!-- JavaScript to handle interactions and display logic -->
     <script src="script.js"></script>
 </body>
 </html>
