--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
         </p>
     </div>
 
+<select id="planet-select" onchange="zoomToPlanet(this.value)">
+    <option value="">Select a planet</option>
+    <option value="Sun">Sun</option>
+    <option value="Mercury">Mercury</option>
+    <option value="Venus">Venus</option>
+    <option value="Earth">Earth</option>
+    <option value="Mars">Mars</option>
+    <option value="Jupiter">Jupiter</option>
+    <option value="Saturn">Saturn</option>
+    <option value="Uranus">Uranus</option>
+    <option value="Neptune">Neptune</option>
+</select>
+    
     <!-- JavaScript to handle interactions and display logic -->
     <script src="script.js"></script>
 </body>
