--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/TWEEN.min.js"></script>
 </head>
 <body>
+    <!-- Canvas for the 3D Solar System -->
     <canvas id="solar-system-canvas"></canvas>
 
     <!-- Info Panel for displaying planet details -->
