--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Solar System</title>
     <style>
+        /* Basic dropdown styling */
         #planet-select {
             position: fixed;
             top: 10px;
             left: 10px;
-            padding: 5px;
+            padding: 8px;
             font-size: 16px;
             z-index: 10;
             background-color: white;
+            border-radius: 5px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
     </style>
     <link rel="stylesheet" href="style.css">
