--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/TWEEN.min.js"></script>
 </head>
 <body>
+    
+    <!-- Title for Solar System Explorer -->
+    <div id="title">Solar System Explorer</div>
+
     <canvas id="solar-system-canvas"></canvas>
 
     <!-- Info Panel for displaying planet details -->
@@ -35,19 +39,6 @@
         </p>
     </div>
 
-    <!-- Dropdown for planet selection -->
-    <select id="planet-select" onchange="zoomToPlanet(this.value)">
-        <option value="">Select a planet</option>
-        <option value="Sun">Sun</option>
-        <option value="Mercury">Mercury</option>
-        <option value="Venus">Venus</option>
-        <option value="Earth">Earth</option>
-        <option value="Mars">Mars</option>
-        <option value="Jupiter">Jupiter</option>
-        <option value="Saturn">Saturn</option>
-        <option value="Uranus">Uranus</option>
-        <option value="Neptune">Neptune</option>
-    </select>
     
     <script src="script.js"></script>
 </body>
