--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Solar System</title>
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Styles for dropdown and info panel -->
     <style>
         #planet-select {
             position: fixed;
@@ -14,8 +17,44 @@
             z-index: 10;
             background-color: white;
         }
+
+        #info-panel {
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
+            max-width: 300px;
+            padding: 10px;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            border-radius: 5px;
+            display: none;
+            transition: opacity 0.5s ease-in-out;
+        }
+
+        #info-panel.show {
+            display: block;
+            opacity: 1;
+        }
+
+        #read-more, #read-less {
+            color: yellow;
+            cursor: pointer;
+            text-decoration: underline;
+        }
+
+        #close-btn {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            background: transparent;
+            border: none;
+            color: white;
+            font-size: 18px;
+            cursor: pointer;
+        }
     </style>
-    <link rel="stylesheet" href="style.css">
+
+    <!-- External Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/TWEEN.min.js"></script>
@@ -25,7 +64,22 @@
     <!-- Title for Solar System Explorer -->
     <div id="title">Solar System Explorer</div>
 
+    <!-- Canvas for Three.js rendering -->
     <canvas id="solar-system-canvas"></canvas>
+
+    <!-- Dropdown for selecting planets -->
+    <select id="planet-selector">
+        <option value="">Select a Planet</option>
+        <option value="Sun">Sun</option>
+        <option value="Mercury">Mercury</option>
+        <option value="Venus">Venus</option>
+        <option value="Earth">Earth</option>
+        <option value="Mars">Mars</option>
+        <option value="Jupiter">Jupiter</option>
+        <option value="Saturn">Saturn</option>
+        <option value="Uranus">Uranus</option>
+        <option value="Neptune">Neptune</option>
+    </select>
 
     <!-- Info Panel for displaying planet details -->
     <div id="info-panel">
@@ -39,7 +93,7 @@
         </p>
     </div>
 
-    
+    <!-- Main JavaScript file -->
     <script src="script.js"></script>
 </body>
 </html>
