--- a/index.html
+++ b/index.html
@@ -4,57 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Solar System</title>
+
+    <!-- External CSS for styling -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- Styles for dropdown and info panel -->
-    <style>
-        #planet-select {
-            position: fixed;
-            top: 10px;
-            left: 10px;
-            padding: 5px;
-            font-size: 16px;
-            z-index: 10;
-            background-color: white;
-        }
-
-        #info-panel {
-            position: fixed;
-            bottom: 10px;
-            left: 10px;
-            max-width: 300px;
-            padding: 10px;
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            border-radius: 5px;
-            display: none;
-            transition: opacity 0.5s ease-in-out;
-        }
-
-        #info-panel.show {
-            display: block;
-            opacity: 1;
-        }
-
-        #read-more, #read-less {
-            color: yellow;
-            cursor: pointer;
-            text-decoration: underline;
-        }
-
-        #close-btn {
-            position: absolute;
-            top: 5px;
-            right: 5px;
-            background: transparent;
-            border: none;
-            color: white;
-            font-size: 18px;
-            cursor: pointer;
-        }
-    </style>
-
-    <!-- External Scripts -->
+    <!-- Include necessary Three.js libraries and TWEEN for animations -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/TWEEN.min.js"></script>
