--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         </p>
     </div>
 
+    <audio id="background-music" src="assets/space_music.mp3" loop autoplay></audio>
+
     <!-- Main JavaScript file -->
     <script src="script.js"></script>
 </body>
